<resources>
    <!-- Strings used in the login activity -->
    <string name="app_name">HKR_Health</string>
    <string name="enter_password">Enter password..</string>
    <string name="enter_username">Enter username..</string>
    <string name="create_user">Create user</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="normal_login">Login</string>

    <!-- Strings used for navigation menu -->
    <string name="nav_workout_creation">Workout creation</string>
    <string name="nav_workout_history">Workout history</string>
    <string name="nav_measurement_creation">Measurement creation</string>
    <string name="nav_measurement_history">Measurement history</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_facebook_share">Share on Facebook</string>
    <string name="nav_mail">Send mail</string>
    <string name="nav_statistics">Statistics</string>

    <!-- Strings used for statistics fragment -->
    <string name="statistics_intro">Since you first started using HKR Health you have logged the following: </string>
    <string name="statistics_workouts_logged">Number of workouts logged: </string>
    <string name="statistics_heaviest_lift">Heaviest lift performed: </string>
    <string name="statistics_measuerments_logged">Number of measurements logged: </string>

    <!-- Strings used for send mail fragment -->
    <string name="subject_of_mail">SUBJECT: </string>
    <string name="body_of_mail">BODY: </string>
    <string name="send_mail">SEND MAIL</string>

    <!-- Strings used for facebook login -->
    <string name="facebook_app_id">566508910509655</string>
    <string name="fb_login_protocol_scheme">fb566508910509655</string>

    <!-- Strings used in multiple fragments -->
    <string name="title">TITLE:</string>
    <string name="date">DATE:</string>

    <!-- Strings used in the Workout fragments -->
    <string name="workout_creation"><b>Create workout</b></string>
    <string name="workout_history">View workout history</string>
    <string name="add_exercise"><b>Add exercise</b></string>
    <string name="clear"><b>Clear</b></string>
    <string name="exercise">EXERCISE:</string>
    <string name="weight">WEIGHT:</string>
    <string name="toolbar_title">HKR Health</string>
    <string name="exercises_performed">EXERCISES PERFORMED: </string>
    <string name="reps">REPS: </string>

    <!-- Strings used in the Measurement fragments -->
    <string name="measurement_creation"><b>Create measurement</b></string>
    <string name="measurement_history">View measurement history</string>
    <string name="arms">ARMS: </string>
    <string name="legs">LEGS: </string>
    <string name="chest">CHEST: </string>
    <string name="waist">WAIST: </string>
    <string name="shoulders">SHOULDERS: </string>
    <string name="calves">CALVES: </string>


    <string-array name="muscle_groups">
        <item>Chest</item>
        <item>Back</item>
        <item>Bicep</item>
        <item>Tricep</item>
        <item>Shoulders</item>
        <item>Core</item>
        <item>Legs</item>
    </string-array>

    <string-array name="chest_exercises">
        <item>Benchpress</item>
        <item>Dumbellpress</item>
        <item>Flyes</item>
        <item>Pushup</item>
    </string-array>

    <string-array name="back_exercises">

    </string-array>
</resources>
