<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_workout_creation"
        android:title="@string/nav_workout_creation"/>

    <item android:id="@+id/nav_workout_history"
        android:title="@string/nav_workout_history"/>

    <item android:id="@+id/nav_measurement_creation"
        android:title="@string/nav_measurement_creation"/>

    <item android:id="@+id/nav_measurement_history"
        android:title="@string/nav_measurement_history"/>

    <item android:id="@+id/nav_statistics"
        android:title="@string/nav_statistics"/>

    <item android:id="@+id/nav_send_mail"
        android:title="@string/nav_mail"/>

    <item android:id="@+id/nav_share_facebook"
        android:title="@string/nav_facebook_share"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/nav_logout"/>

</menu>