<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/titleLabel"
        android:text="@string/title"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/workoutTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/titleLabel"
        app:layout_constraintLeft_toRightOf="@id/titleLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"

        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/exerciseLabel"
        android:text="@string/exercise"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/exerciseName"
        app:layout_constraintTop_toBottomOf="@id/workoutTitle"
        app:layout_constraintBottom_toBottomOf="@id/exerciseLabel"
        app:layout_constraintLeft_toRightOf="@id/exerciseLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/weightLabel"
        android:text="@string/weight"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/exerciseLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"

        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/exerciseWeight"
        app:layout_constraintTop_toBottomOf="@id/exerciseName"
        app:layout_constraintBottom_toBottomOf="@id/weightLabel"
        app:layout_constraintLeft_toRightOf="@id/weightLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/addExerciseButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_background"
        android:text="@string/add_exercise"
        app:layout_constraintTop_toBottomOf="@+id/exerciseWeight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"

        />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/clear"
        app:layout_constraintTop_toBottomOf="@id/addExerciseButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/workoutLV"

        />

    <ListView
        android:id="@+id/workoutLV"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clearButton"
        app:layout_constraintBottom_toTopOf="@+id/createWorkoutButton"
        tools:layout_editor_absoluteY="410dp"
        >

    </ListView>


    <Button
        android:id="@+id/createWorkoutButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/workout_creation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workoutLV"
         />


</android.support.constraint.ConstraintLayout>