<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statisticsIntro"
        android:text="@string/statistics_intro"
        android:textSize="25sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/workoutsLogged"
        android:text="@string/statistics_workouts_logged"
        android:textSize="25sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/statisticsIntro"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/workoutsLoggedTV"
        android:textSize="25sp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toRightOf="@id/workoutsLogged"
        app:layout_constraintBottom_toBottomOf="@id/workoutsLogged"
        app:layout_constraintTop_toTopOf="@id/workoutsLogged"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heaviestLift"
        android:text="@string/statistics_heaviest_lift"
        android:textSize="25sp"
        android:layout_margin="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/workoutsLogged"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statisticsExerciseNameTV"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heaviestLift"
        app:layout_constraintRight_toLeftOf="@id/statisticsExerciseWeightTV"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statisticsExerciseWeightTV"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/statisticsExerciseNameTV"
        app:layout_constraintTop_toBottomOf="@id/heaviestLift"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/measurementsLogged"
        android:text="@string/statistics_measuerments_logged"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statisticsExerciseNameTV"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statisticsMeasurementsLoggedTV"
        android:textSize="25sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/measurementsLogged"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</android.support.constraint.ConstraintLayout>