<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="50dp"
        android:textSize="20dp"
        android:id="@+id/subjectLabel"
        android:text="@string/subject_of_mail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/design_textview"
        />

    <TextView
        android:layout_width="100dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textSize="20dp"
        android:id="@+id/bodyLabel"
        android:text="@string/body_of_mail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectLabel"
        android:background="@drawable/design_textview"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:id="@+id/sendMailSubjectTW"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="@id/subjectLabel"
        app:layout_constraintBottom_toBottomOf="@id/subjectLabel"
        app:layout_constraintLeft_toRightOf="@id/subjectLabel"
        android:background="@drawable/design_edittext"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/sendMailBodyTextView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:gravity="top|left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyLabel"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/design_edittext"
        />

    <Button
        android:id="@+id/sendMailButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:text="@string/send_mail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendMailBodyTextView"
        android:background="@drawable/button_background"
        />


</android.support.constraint.ConstraintLayout>